--- a/bus.html
+++ b/bus.html
@@ -48,7 +48,7 @@
                         <div class="d-flex flex-wrap">
                             <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Location</a>
                            
-                            <a href="mailto:dmd@diplomatscarhire.com" class="text-muted me-0"><i class="fas fa-envelope text-primary me-2"></i>dmd@diplomatscarhire.com</a>
+                            <a href="mailto:dmd@diplomatscarhire.com" class="text-muted me-0"><i class="fas fa-envelope text-primary me-2"></i>sales@diplomatscarhire.com</a>
                         </div>
                     </div>
                     <div class="col-lg-6 text-center text-lg-end">
