--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
                     <p>Thank you. A Diplomats Car Hire representative will contact you shortly. Please bear with us. Thank you for your patience.</p>
                     <p>You can quickly text or call us on the channels below:</p>
                     <ul>
-                        <li>Email: <a href="mailto:dmd@diplomatscarhire.com">dmd@diplomatscarhire.com</a></li>
+                        <li>Email: <a href="mailto:dmd@diplomatscarhire.com">sales@diplomatscarhire.com</a></li>
                         <li>Calls: <a href="tel:+265888822061">+265 888 822 061</a></li>
                         <li>WhatsApp: <a href="https://wa.me/message/265888822061" target="_blank">Whatsapp us</a></li>
                     </ul>
