--- a/suv.html
+++ b/suv.html
@@ -339,7 +339,7 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Contact Info</h4>
                             <a href="#"><i class="fa fa-map-marker-alt me-2"></i>PLOT NO: 10/63, Area 10, Lilongwe, Malawi</a>
-                            <a href="mailto:dmd@diplomatscarhire.com"><i class="fas fa-envelope me-2"></i>dmd@diplomatscarhire.com</a>
+                            <a href="mailto:dmd@diplomatscarhire.com"><i class="fas fa-envelope me-2"></i>sales@diplomatscarhire.com</a>
                             <a href="tel:+265888822061"><i class="fas fa-phone me-2"></i>+265 888 822 061</a>
                             <a href="tel:+265999983581"><i class="fas fa-phone me-2"></i>+265 999 983 581</a>
                             <div class="d-flex">
