--- a/saloon.html
+++ b/saloon.html
@@ -48,7 +48,7 @@
                         <div class="d-flex flex-wrap">
                             <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Location</a>
                            
-                            <a href="mailto:dmd@diplomatscarhire.com" class="text-muted me-0"><i class="fas fa-envelope text-primary me-2"></i>dmd@diplomatscarhire.com</a>
+                            <a href="mailto:dmd@diplomatscarhire.com" class="text-muted me-0"><i class="fas fa-envelope text-primary me-2"></i>sales@diplomatscarhire.com</a>
                         </div>
                     </div>
                     <div class="col-lg-6 text-center text-lg-end">
@@ -399,7 +399,7 @@
                     <p>Thank you. A Diplomats Car Hire representative will contact you shortly. Please bear with us. Thank you for your patience.</p>
                     <p>You can quickly text or call us on the channels below:</p>
                     <ul>
-                        <li>Email: <a href="mailto:dmd@diplomatscarhire.com">dmd@diplomatscarhire.com</a></li>
+                        <li>Email: <a href="mailto:dmd@diplomatscarhire.com">sales@diplomatscarhire.com</a></li>
                         <li>Calls: <a href="tel:+265888822061">+265 888 822 061</a></li>
                         <li>WhatsApp: <a href="https://wa.me/message/265888822061" target="_blank">Whatsapp us</a></li>
                     </ul>
