--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="d-flex flex-wrap">
                             <a href="#" class="text-light me-4"><i class="fas fa-map-marker-alt text-primary me-2"></i>Location</a>
                            
-                            <a href="mailto:dmd@diplomatscarhire.com" class="text-muted me-0"><i class="fas fa-envelope text-primary me-2"></i>sales@diplomatscarhire.com</a>
+                            <a href="mailto:sales@diplomatscarhire.com" class="text-muted me-0"><i class="fas fa-envelope text-primary me-2"></i>sales@diplomatscarhire.com</a>
                         </div>
                     </div>
                     <div class="col-lg-6 text-center text-lg-end">
@@ -699,7 +699,7 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Contact Info</h4>
                             <a href="#"><i class="fa fa-map-marker-alt me-2"></i>PLOT NO: 10/63, Area 10, Lilongwe, Malawi</a>
-                            <a href="mailto:dmd@diplomatscarhire.com"><i class="fas fa-envelope me-2"></i>dmd@diplomatscarhire.com</a>
+                            <a href="mailto:sales@diplomatscarhire.com"><i class="fas fa-envelope me-2"></i>sales@diplomatscarhire.com</a>
                             <a href="tel:+265888822061"><i class="fas fa-phone me-2"></i>+265 888 822 061</a>
                             <a href="tel:+265999983581"><i class="fas fa-phone me-2"></i>+265 999 983 581</a>
                             <div class="d-flex">
@@ -782,7 +782,7 @@
                     <p>Thank you. A Diplomats Car Hire representative will contact you shortly. Please bear with us. Thank you for your patience.</p>
                     <p>You can quickly text or call us on the channels below:</p>
                     <ul>
-                        <li>Email: <a href="mailto:dmd@diplomatscarhire.com">sales@diplomatscarhire.com</a></li>
+                        <li>Email: <a href="mailto:sales@diplomatscarhire.com">sales@diplomatscarhire.com</a></li>
                         <li>Calls: <a href="tel:+265888822061">+265 888 822 061</a></li>
                         <li>WhatsApp: <a href="https://wa.me/message/265888822061" target="_blank">Whatsapp us</a></li>
                     </ul>
