--- a/index.html
+++ b/index.html
@@ -573,82 +573,38 @@
        
 
         <!-- Testimonial Start -->
-        <section id="reviews">
-        <div class="container-fluid testimonial pb-5">
-            <div class="container pb-5">
-                <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
-                    <h1 class="display-5 text-capitalize mb-3">Our Clients<span class="text-primary"> Reviews</span></h1>
-                    <p class="mb-0">We appreciate reviews from our customers therefore we are delighted to share some of beautiful feedback 
-                    </p>
+<!-- Testimonial Start -->
+<section id="reviews">
+    <div class="container-fluid pb-5">
+        <div class="container pb-5">
+            <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
+                <h1 class="display-5 text-capitalize mb-3">Our Clients<span class="text-primary"></span></h1>
+                <p class="mb-0">We are proud to have worked with these amazing clients.</p>
+            </div>
+            <div class="owl-carousel logo-carousel wow fadeInUp" data-wow-delay="0.1s">
+                <div class="logo-item">
+                    <img src="img/airtel.webp" class="img-fluid" alt="Client 1">
                 </div>
-                <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="testimonial-item">
-                        <div class="testimonial-quote"><i class="fa fa-quote-right fa-2x"></i>
-                        </div>
-                        <div class="testimonial-inner p-4">
-                            <img src="img/profile.webp" class="img-fluid" alt="">
-                            <div class="ms-4">
-                                <h4>James Smith</h4>
-                                <p>Tourist</p>
-                                <div class="d-flex text-primary">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star text-body"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="border-top rounded-bottom p-4">
-                            <p class="mb-0">Great services from diplomats car hire.</p>
-                        </div>
-                    </div>
-                    <div class="testimonial-item">
-                        <div class="testimonial-quote"><i class="fa fa-quote-right fa-2x"></i>
-                        </div>
-                        <div class="testimonial-inner p-4">
-                            <img src="img/profile.webp" class="img-fluid" alt="">
-                            <div class="ms-4">
-                                <h4>Peterson Adams</h4>
-                                <p>NGO Guests</p>
-                                <div class="d-flex text-primary">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star text-body"></i>
-                                    <i class="fas fa-star text-body"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="border-top rounded-bottom p-4">
-                            <p class="mb-0">The cars are comfortable and new, great customer service as well.</p>
-                        </div>
-                    </div>
-                    <div class="testimonial-item">
-                        <div class="testimonial-quote"><i class="fa fa-quote-right fa-2x"></i>
-                        </div>
-                        <div class="testimonial-inner p-4">
-                            <img src="img/profile.webp" class="img-fluid" alt="">
-                            <div class="ms-4">
-                                <h4>Sung Chen</h4>
-                                <p>Artist</p>
-                                <div class="d-flex text-primary">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star text-body"></i>
-                                    <i class="fas fa-star text-body"></i>
-                                    <i class="fas fa-star text-body"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="border-top rounded-bottom p-4">
-                            <p class="mb-0">I am glad we connected, the vans we hired served as well.</p>
-                        </div>
-                    </div>
+                <div class="logo-item">
+                    <img src="img/nico.png" class="img-fluid" alt="Client 2">
                 </div>
+                <div class="logo-item">
+                    <img src="img/oldmutual.webp" class="img-fluid" alt="Client 3">
+                </div>
+                <div class="logo-item">
+                    <img src="img/msu.png" class="img-fluid" alt="Client 4">
+                </div>
+                <div class="logo-item">
+                    <img src="img/feed.webp" class="img-fluid" alt="Client 5">
+                </div>
+                <!-- Add more logo items as needed -->
             </div>
         </div>
-        </section>
+    </div>
+</section>
+
+
+        
         <!-- Testimonial End -->
 
         <!-- Footer Start -->
